# learning-python

class/: sample_1.py  sample_2.py  sample_3.py  sample_4.py
csv/: import_csv_data.py
ex-packages/boto3/: Pipfile  cloud_watch.py  ec2.py
ex-packages/deepl/: .envrc.sample  Pipfile  README.md  sample.py
ex-packages/edgegrid-python/: README.md
ex-packages/pyautogui/: requirements.txt  sample.py
ex-packages/pygame/: pyproject.toml  sample.py
ex-packages/pyopenssl/: Pipfile  README.md  sample.py
ex-packages/pysnooper/: Pipfile  README.md  sample.py
ex-packages/pyxel/: pyproject.toml
ex-packages/sqlparse/: README.md  sample.py  sample2.py
json/: import_json_data.py
random/: sample.py
url/: url_encode.py
xml/: import_xml_data.py
zip/: zip.py
